# dataforgood_saison13_pollution_eau

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  pytest.yaml  synchronize_db.yaml
analytics/evidence/.evidence/customization/: .profile.json
analytics/evidence/pages/: index.md
analytics/evidence/sources/local_duckdb/: connection.yaml  edc_communes.sql  edc_prelevements.sql  sise_communes.sql  sise_prelevements.sql
analytics/notebooks/: etude_cvm.ipynb  exemple.ipynb
analytics/notebooks/exemple/: exemple_duckdb.ipynb  exemple_ibis.ipynb
eau_pipelines/: run.py
eau_pipelines/notebooks/: test_storage_utils.ipynb
eau_pipelines/tasks/: __init__.py  _common.py
pipelines/: run.py  test_integration.py
pipelines/config/: .env.example  config.py
pipelines/notebooks/: test_boto3.ipynb  test_storage_utils.ipynb
pipelines/tasks/: _common.py  _config_edc.py  build_database.py  download_database.py  upload_database.py
pipelines/utils/: storage_client.py  utils.py
webapp/: README.md  package-lock.json  package.json
webapp/app/: layout.tsx  page.tsx
webapp/components/: Map.tsx
