[project]
name = "pollution_eau"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.1.3",
    "duckdb-engine>=0.15.0",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "ipython-sql>=0.5.0",
    "jupysql>=0.10.17",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "jupyter>=1.1.0",
    "boto3==1.34.11",
    "python-dotenv>=1.0.1",
    "pre-commit>=4.1.0",
    "ibis-framework[duckdb]>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines"]



