[project]
name = "pollution_eau"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   
    "click>=8.1.8,<9",
    "duckdb>=1.1.3,<2",
    "duckdb-engine>=0.15.0,<1",
    "folium>=0.19.4",
    "ipykernel>=6.29.5,<7",
    "ipython>=8.31.0,<9",
    "ipython-sql>=0.5.0,<1",
    "jupysql>=0.10.17,<1",
    "matplotlib>=3.10.0,<4",
    "pandas>=2.2.3,<3",
    "requests>=2.32.3,<3",
    "boto3==1.34.11,<2",
    "python-dotenv>=1.0.1,<2",
    "ibis-framework[duckdb]>=9.5.0,<10",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.0,<2",
    "pre-commit>=4.1.0,<5",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines"]



